<resources>
    <string name="app_name">Учет уголовных дел</string>
    <string name="helloStr">Добро пожаловать!</string>
    <string name="plsEnter">Войдите или зарегистрируйтесь</string>
    <string name="login">Логин</string>
    <string name="pass">Пароль</string>
    <string name="enter">Войти</string>
    <string name="reg">Зарегистрироваться</string>

    <string name="register">Регистрация</string>
    <string name="idUser">Ваш номер(id)</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="middleName">Отчество</string>
    <string name="position">Должность</string>
    <string name="rank">Звание</string>
    <string name="phone">Служебный телефон</string>
    <string name="acceptReg">Принять</string>

    <string name="exit">Выйти</string>
    <string name="mainMenu">Главное меню</string>
    <string name="victim">Потерпевшие</string>
    <string name="statement">Заявления</string>
    <string name="organ_employee">Сотрудники органов</string>
    <string name="criminal_case">Уголовные дела</string>
    <string name="accused">Обвиняемые</string>
    <string name="sentence">Приговоры</string>
    <string name="period">Период рассмотрения дела</string>

    <string name="addVictim">Добавить потерпевшего</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="birthday">Дата рождения</string>
    <string name="passport">Паспорт</string>
    <string name="citizenship">Гражданство</string>
    <string name="social_status">Социальное положение</string>
    <string name="official_position">Должностное положение</string>
    <string name="phoneCommon">Телефон</string>

    <string name="addStatement">Добавить заявление</string>
    <string name="addCriminal_case">Добавить уголовное дело</string>
    <string name="addingVictim">Добавление потерпевшего</string>
    <string name="addingSentence">Добавление приговора</string>
    <string name="addSentence">Добавить приговор</string>
    <string name="addingAccused">Добавление обвиняемого</string>

    <string name="addAccused">Добавить обвиняемого</string>
    <string name="addingStatement">Добавление заявления</string>

    <string name="id_statement">Номер заявления</string>
    <string name="Registration_date">Дата регистрации</string>
    <string name="Additional_information">Дополнительные сведения</string>
    <string name="Id_victim">Код потерпевшего</string>
    <string name="Id_organ_employee">Табельный номер сотрудника органа</string>

    <string name="date_of_excitement">Дата возбуждения</string>
    <string name="date_of_filing">Дата сдачи в архив</string>
    <string name="addingCriminal_case">Создание уголовного дела</string>
    <string name="Criminal_case">Уголовное дело</string>
    <string name="Accused">Обвиняемый</string>
    <string name="Crime">Преступление</string>
    <string name="Qualification_of_crime">Квалификация преступления</string>
    <string name="Participants_in_crime">Участники преступления</string>
    <string name="date_and_time_of_crime">Дата и время совершения преступления</string>
    <string name="number_of_criminal_case">Номер в уголовном деле</string>
    <string name="participants">Участники преступления</string>

    <string name="date_of_issue">Дата вынесения</string>
    <string name="content">Содержание</string>
    <string name="periodSentence">Период жизни дела от даты подачи заявления до даты вынесения приговора:</string>

    <string name="article">Статья</string>
    <string name="sign">Знак</string>
    <string name="part">Часть</string>
    <string name="item">Пункт</string>

    <string name="CompleteCriminal_case">Завершенные</string>
    <string name="NotCompleteCriminal_case">Незавершенные</string>


    <string name="title_activity_register">RegisterActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>