<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVictimActivity">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/userNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/exitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:text="@string/exit"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/currentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/addingVictim"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentName">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/surname"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/middleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/middleName"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/middleName"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genderSpinner"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/birthday"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/passport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birthday"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/passport"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/citizenship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passport"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/citizenship"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/social_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/citizenship"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/social_status"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/official_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/social_status"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/official_position"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/phoneCommon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/official_position"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/phoneCommon"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/acceptReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneCommon"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/acceptReg" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>