<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStatementActivity">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/userNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:maxLength="25"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/exitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:text="@string/exit"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/currentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/addingStatement"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentName">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etId_statement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/id_statement"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etRegistration_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etId_statement"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/Registration_date"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etAdditional_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etRegistration_date"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/Additional_information"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/id_victimSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etAdditional_information"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/acceptReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id_victimSpinner"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/acceptReg" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>