<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutVictim"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".VictimActivity">

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/userNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/exitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/exit"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/mainMenuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/victim"
        android:layout_below="@+id/line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/addVictim"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/addVictim"
        android:layout_below="@+id/mainMenuText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>